[gd_scene load_steps=14 format=3 uid="uid://b7gft5siysukn"]

[ext_resource type="Script" path="res://Scripts/orc_enemy.gd" id="1_dsdqd"]
[ext_resource type="Texture2D" uid="uid://dnl0kcvhf4s00" path="res://Assets/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Orc/Orc/Orc.png" id="2_n000d"]
[ext_resource type="PackedScene" uid="uid://bbymqa7t1xsui" path="res://Scenes/components/health_bar.tscn" id="3_xdb3a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blov0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kay2"]
size = Vector2(17, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvjnh"]
size = Vector2(13, 20)

[sub_resource type="Animation" id="Animation_g5p5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 2)]
}

[sub_resource type="Animation" id="Animation_ynwxm"]
resource_name = "alert"
loop_mode = 1

[sub_resource type="Animation" id="Animation_a10cj"]
resource_name = "attack"
length = 0.8
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemy_attack_box/enemy_attack_box_collision:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [true, true, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(2, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}

[sub_resource type="Animation" id="Animation_m7p1s"]
resource_name = "death"
length = 0.4
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_qd1vv"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.142857, 0.285714, 0.428571, 0.571429, 0.714286),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_03yik"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g1lrp"]
_data = {
"RESET": SubResource("Animation_g5p5t"),
"alert": SubResource("Animation_ynwxm"),
"attack": SubResource("Animation_a10cj"),
"death": SubResource("Animation_m7p1s"),
"idle": SubResource("Animation_qd1vv"),
"walk": SubResource("Animation_03yik")
}

[node name="Orc_enemy" type="CharacterBody2D"]
position = Vector2(70, 57)
script = ExtResource("1_dsdqd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_blov0")

[node name="hurt_box" type="Area2D" parent="."]

[node name="hurt_area" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_5kay2")

[node name="enemy_attack_box" type="Area2D" parent="." groups=["enemy_sword"]]

[node name="enemy_attack_box_collision" type="CollisionShape2D" parent="enemy_attack_box" groups=["enemy_sword"]]
position = Vector2(19, 0)
shape = SubResource("RectangleShape2D_kvjnh")
disabled = true
debug_color = Color(0.731199, 0, 0.0817879, 0.419608)

[node name="StateTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="attack_player_detector" type="RayCast2D" parent="."]
position = Vector2(0, 1)
target_position = Vector2(26, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g1lrp")
}

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(1.31, 1.31)
target_position = Vector2(50, 0)

[node name="player_detector2" type="RayCast2D" parent="."]
position = Vector2(-1, 1)
scale = Vector2(1.7161, 1.7161)
target_position = Vector2(-50, 0)

[node name="HealthBar" parent="." instance=ExtResource("3_xdb3a")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -9.0
offset_top = -17.0
offset_right = 10.0
offset_bottom = -15.0
grow_horizontal = 1
grow_vertical = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-7.62939e-06, 1)
scale = Vector2(1.36, 1.23)
texture = ExtResource("2_n000d")
hframes = 8
vframes = 6
frame = 17

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="enemy_attack_box" to="." method="_on_enemy_attack_box_area_entered"]
[connection signal="timeout" from="StateTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="StateTimer" to="." method="_on_knockback_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
